# rust-todo-list

./: .gitignore  Cargo.toml
src/: .env  database.sql  main.rs
src/controller/: auth_controller.rs  mod.rs  todo_controller.rs
src/error_handler/: error_handler.rs
src/middleware/: auth.rs
src/model/: api_response.rs  entity.rs  jwt.rs  mod.rs  user.rs
src/model/response/: user_response.rs
src/pkg/: db.rs  jwt.rs
src/repository/: mod.rs  todo_repository.rs
src/repository/auth/: login.rs
src/routes/: router.rs
src/service/: mod.rs  todo_service.rs
src/service/auth/: login_service.rs  mod.rs
src/util/: util.rs
