[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
mysql = "26.0.0"
axum = "0.8.3"
hyper = { version = "0.14", features = ["server"] }
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10"
hex = "0.4"